--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -2,8 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
+		<link rel="stylesheet" href="global.scss">
 		<meta name="viewport" content="width=device-width" />
+		
+		<!-- Other pages will have their svelte:head injected here -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
